<resources>
    <string name="app_name">My Squad</string>
    <string name="action_settings">Settings</string>
    <string name="btn_save">Salvar</string>
    <string name="btn_del">Deletar</string>
    <string-array name="posicao">
        <item>"Selecione"</item>
        <item>"Goleiro"</item>
        <item>"Fixo"</item>
        <item>"Ala Direito"</item>
        <item>"Ala Esquerdo"</item>
        <item>"Pivô"</item>
    </string-array>
    <string name="menu_update">"Editar"</string>
    <string name="goleiro">Goleiro</string>
    <string name="fixo">Fixo</string>
    <string name="ala_direito">Ala Direito</string>
    <string name="ala_esquerdo">Ala Esquerdo</string>
    <string name="pivo">Pivô</string>
    <string name="ball">Ball</string>
    <string name="action_share">Compartilhar</string>
    <string name="text_fragment_a">Tab Home</string>
    <string name="text_fragment_b">Tab Eventos</string>


    <!--Tab-->
    <string-array name="title_tabs">
        <item>Home</item>
        <item>Eventos</item>
    </string-array>
</resources>
