<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <RelativeLayout
        android:id="@+id/lineUpLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="52dp"
        android:background="@drawable/fut_board">

        <Button
            android:id="@+id/btnGoleiro"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/buttonshape"
            android:clickable="false"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/goleiro"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="162dp"
            tools:layout_editor_absoluteY="629dp" />

        <Button
            android:id="@+id/btnFixo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/fixo"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="162dp"
            tools:layout_editor_absoluteY="516dp" />

        <Button
            android:id="@+id/btnAlaD"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/ala_direito"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="308dp"
            tools:layout_editor_absoluteY="436dp" />

        <Button
            android:id="@+id/btnAlaE"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/ala_esquerdo"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="436dp" />

        <Button
            android:id="@+id/btnPivo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/pivo"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="162dp"
            tools:layout_editor_absoluteY="366dp" />

        <ImageView
            android:id="@+id/imgBall"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/ball"
            app:srcCompat="@drawable/ball" />
    </RelativeLayout>

</RelativeLayout>
